--- a/travel-trucks/src/index.css
+++ b/travel-trucks/src/index.css
@@ -1,68 +1,109 @@
 :root {
-  font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
+  --font-family: Inter, sans-serif;
+  --font-size: 16px;
+  --font-weight: 400;
+  --line-height: 1.5;
 
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  --color-main: #101828;
+  --color-text: #475467;
+  --color-gray: #6C717B;
+  --color-btn: #E44848;
+  --color-btn-hover: #D84343;
+  --color-rate: #FFC531;
+  --color-light-gray: #DADDE1;
+  --color-badge: #F2F4F7;
+  --color-input: #F7F7F7;
+  --color-white: #FFFFFF;
+  --color-label: rgba(16, 24, 40, 0.6);
+  --color-border: rgba(16, 24, 40, 0.2);
+  --color-line: rgba(16, 24, 40, 0.1);
 
+  --shadow-gray: rgba(0, 0, 0, 0.24);
+  --shadow-li: rgba(16, 24, 40, 0.08);
+  --trans: 0.3s ease-in-out;
+
+  font-family: var(--font-family);
+  font-size: var(--font-size);
+  font-weight: var(--font-weight);
+  line-height: var(--line-height);
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+}
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+body {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  height: 100vh;
+  font-family: var(--font-family);
+  font-size: var(--font-size);
+  line-height: var(--line-height);
+}
+
+h1,
+h2,
+h3,
+p {
+  margin: 0;
+}
+
+h1 {
+  font-size: 48px;
+  font-weight: 600;
+  color: var(--color-input);
+}
+
+h2 {
+  font-size: clamp(18px, 5vw, 24px);
+  font-weight: 600;
+  color: var(--color-main);
+}
+
+h3 {
+  font-size: 20px;
+  font-weight: 600;
+  color: var(--color-main);
+}
+
+p {
+  color: var(--color-text);
+}
+
+ul {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
+.link,
+li,
+a {
+  text-decoration: none;
+  color: currentColor;
 }
 
 a {
   font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
 }
+
 a:hover {
-  color: #535bf2;
+  transform: scale(1.03);
+  transition: transform var(--trans);
 }
 
-body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
-}
-
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
-}
-
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
-}
-
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
+picture,
+img {
+  width: 100%;
+  height: auto;
+  display: block;
+  object-fit: cover;
+  object-position: center;
+  flex-shrink: 0;
 }
