--- a/travel-trucks/src/common/components/CardFilter/index.module.css
+++ b/travel-trucks/src/common/components/CardFilter/index.module.css
@@ -7,6 +7,7 @@
 }
 
 .inputContainer {
+    position: relative;
     display: flex;
     flex-direction: column;
     align-items: flex-start;
@@ -43,8 +44,17 @@
     font-weight: 400;
     line-height: 1.5;
     border: none;
-    background: var(--color-input);
     padding-left: 28px;
+    background: var(--color-input);
+
+    &:focus::placeholder {
+        color: transparent;
+    }
+
+    &:placeholder {
+        color: var(--color-gray);
+        transition: color 0.2s ease;
+    }
 }
 
 .locationIcon {
@@ -83,4 +93,30 @@
     margin: 0;
     padding-bottom: 24px;
     border-bottom: 1px solid var(--color-light-gray);
+}
+
+.buttonContainer {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.resetBtn {
+    color: var(--color-btn);
+    background-color: var(--color-white) !important;
+    border-radius: 200px;
+    border: 1px solid var(--color-light-gray);
+    transition: transform 0.3s ease;
+    padding: 16px 32px;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+    font-weight: 500;
+    letter-spacing: -0.08px;
+
+    &:focus,
+    &:hover {
+        border: 1px solid var(--color-btn-hover);
+        transform: scale(1.05);
+    }
 }
