--- a/travel-trucks/src/common/components/UI/ScrollToTop/index.module.css
+++ b/travel-trucks/src/common/components/UI/ScrollToTop/index.module.css
@@ -12,9 +12,7 @@
     width: 46px;
     height: 46px;
     font-size: 20px;
-    background-color: var(--color-badge);
-    color: var(--color-white);
-    border: 2px solid var(--color-main);
+    border: 2px solid var(--color-border);
     border-radius: 100%;
     box-shadow: 0 2px 5px var(--shadow-gray);
     cursor: pointer;
