--- a/travel-trucks/src/common/components/UI/Textarea/index.module.css
+++ b/travel-trucks/src/common/components/UI/Textarea/index.module.css
@@ -1,14 +1,14 @@
 .wrapper {
     display: flex;
     flex-direction: column;
+}
 
-    textarea {
-        font-family: Inter, sans-serif;
-        margin-bottom: 4px;
-    }
+.wrapper textarea {
+    font-family: Inter, sans-serif;
+    margin-bottom: 4px;
+}
 
-    .error {
-        color: var(--color-btn);
-        font-size: 12px;
-    }
+.wrapper .error {
+    color: var(--color-btn);
+    font-size: 12px;
 }
