Styles in Review tab tested

--- a/travel-trucks/src/pages/DetailsPage/index.module.css
+++ b/travel-trucks/src/pages/DetailsPage/index.module.css
@@ -229,12 +229,10 @@
     background-color: var(--color-badge);
 }
 
-.reviewAuthor {
+.reviewerName {
     font-size: 16px;
-    font-style: normal;
     font-weight: 500;
     line-height: 1.6;
-    color: var(--Main, #101828);
 }
 
 .reviewRating {
